<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/edtUsernameLayout"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/edtOtp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:hint="@string/otp"
            android:inputType="number"
            android:maxLength="4"
            android:textSize="14sp" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btnOtpVerify"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/verify"
        android:textColor="@color/white"
        android:background="@color/colorPrimary"
        app:layout_constraintEnd_toEndOf="@+id/edtUsernameLayout"
        app:layout_constraintStart_toStartOf="@+id/edtUsernameLayout"
        app:layout_constraintTop_toBottomOf="@+id/edtUsernameLayout" />

    <TextView
        android:id="@+id/txtOtpResendOtp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/resendOtp"
        android:textColor="@color/colorPrimary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/btnOtpVerify"
        app:layout_constraintStart_toStartOf="@+id/btnOtpVerify"
        app:layout_constraintTop_toBottomOf="@+id/btnOtpVerify" />


</androidx.constraintlayout.widget.ConstraintLayout>